--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <%= render "layouts/navbar" %>
+      <%= render "layouts/alerts"  %>
+    </header>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
