--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -1,10 +1,11 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @query %>
 
 <div>
-  <%= link_to "Edit this query", edit_query_path(@query) %> |
   <%= link_to "Back to queries", queries_path %>
-
-  <%= button_to "Destroy this query", @query, method: :delete %>
+  <% if user_signed_in? %>
+    <% if @query.user_id == current_user.id %>
+    | <%= link_to "Edit this query", edit_query_path(@query) %>
+      <%= button_to "Destroy this query", @query, method: :delete, data: { confirm: "Are you sure?" } %>
+    <% end %>
+  <% end %>
 </div>
