Query>Situation Added

--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -16,6 +16,9 @@
     <%= form.text_field :title %>
   </div>
 
+    <%= form.label :situation %>
+    <%= form.text_field :situation %>
+
   <div>
     <%= form.submit %>
   </div>
