Option>Preference Added [Not Working]

--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -9,24 +9,40 @@
 <% end %>
 
 <div>
-  <%= form_with model: @query do |f| %>
-      <%= f.fields_for :query_option do |query_option_form| %>
-        <%# Allow creation of new options %>
-          <%= query_option_form.fields_for :option do |option_form| %>
-              <%= option_form.label :content %>:
-              <%= option_form.text_field :content %>
-              <%= option_form.check_box :preferred %>
+  <% if user_signed_in? %>
+    <% if @query.user_id == current_user.id %>
+      <%= form_with model: @query do |f| %>
+          <%= f.fields_for :query_option do |query_option_form| %>
+            <%# Allow creation of new options %>
+              <%= query_option_form.fields_for :option do |option_form| %>
+                  <%= option_form.label :content %>:
+                  <%= option_form.text_field :content %>
+                  <%= option_form.check_box :preferred %>
+              <% end %>
           <% end %>
+          <%= f.submit "Add Option" %>
       <% end %>
-      <%= f.submit "Add Option" %>
+    <% end %>
   <% end %>
 </div>
 
+<br />
+
 <div>
   <% @query.options.each do |option| %>
+    <p>
       <%= option.content %>
-      <%= button_to "Delete", query_option_path(@query, option), method: :delete %>
-      <%# link_to "Mark as preferred", preferred_query_option_path(option), method: :post %>
+      <% if user_signed_in? %>
+        <% if @query.user_id == current_user.id %>
+          <% if option.preferred %>
+            <%# link_to "Cancel preference", cancel_preference_query_option_path(@query, option), method: :post %>
+          <% else %>
+            <%= button_to "Delete", query_option_path(@query, option), method: :delete %>
+            <%# button_to "Mark as preferred", mark_as_preferred_query_option_path(@query, option), method: :post %>
+          <% end %>
+        <% end %>
+      <% end %>
+    </p>
   <% end %>
 </div>
 
